--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "npm": "^6.5.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-jss": "^8.6.1",
     "react-scripts": "2.1.3"
   },
   "scripts": {
