--- a/tasks.json
+++ b/tasks.json
@@ -28,5 +28,10 @@
     "id": "7e896ae1-4165-4efc-bb06-45f019c962df",
     "title": "Make bed",
     "status": "done"
+  },
+  {
+    "id": "74795653-fc7e-47bb-8a50-0e5bc3257755",
+    "title": "",
+    "status": "todo"
   }
 ]
