Fix blur and focus behaviour

--- a/tasks.json
+++ b/tasks.json
@@ -16,7 +16,7 @@
   },
   {
     "id": "da5c6c67-e64c-43aa-af00-54d00834d5cf",
-    "title": "Frame BFF",
+    "title": "Frame neighbour",
     "status": "doing"
   },
   {
@@ -35,7 +35,7 @@
     "status": "todo"
   },
   {
-    "id": "93496ad7-18e8-47c5-bf28-2886fc510330",
+    "id": "691b8598-2c02-4698-b988-11c36b05f2e0",
     "title": "Water plants",
     "status": "todo"
   }
