--- a/tasks.json
+++ b/tasks.json
@@ -35,8 +35,8 @@
     "status": "todo"
   },
   {
-    "id": "691b8598-2c02-4698-b988-11c36b05f2e0",
-    "title": "Water plants",
+    "id": "3523fe2b-6d9c-45bd-8b75-ce81ec7b912c",
+    "title": "Download Seinfeld",
     "status": "todo"
   }
 ]
