Install beautiful-dnd

--- a/tasks.json
+++ b/tasks.json
@@ -35,8 +35,8 @@
     "status": "todo"
   },
   {
-    "id": "3523fe2b-6d9c-45bd-8b75-ce81ec7b912c",
-    "title": "Download Seinfeld",
+    "id": "94aa97ab-61da-4e51-863a-23ae57e9a00a",
+    "title": "Water plants",
     "status": "todo"
   }
 ]
