--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "i": "^0.3.6",
     "npm": "^6.5.0",
     "react": "^16.7.0",
+    "react-beautiful-dnd": "^10.0.3",
     "react-dom": "^16.7.0",
     "react-jss": "^8.6.1",
     "react-scripts": "2.1.3",
