--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "body-parser": "^1.18.3",
     "concurrently": "^4.1.0",
     "express": "^4.16.4",
-    "morgan": "^1.9.1",
-    "react-beautiful-dnd": "^10.0.3"
+    "morgan": "^1.9.1"
   },
   "devDependencies": {
     "colors": "^1.3.3",
