Change data and update handlers

--- a/tasks.json
+++ b/tasks.json
@@ -1,57 +1,65 @@
-[
-  {
-    "id": "e1457c49-f19d-431c-a2e1-e304abeb5e58",
-    "title": "Launder Money",
-    "status": "todo"
+{
+  "tasksById": {
+    "e1457c49-f19d-431c-a2e1-e304abeb5e58": {
+      "id": "e1457c49-f19d-431c-a2e1-e304abeb5e58",
+      "title": "Launder Money"
+    },
+    "583a4ec0-0e7a-41c3-8e09-8aa4c5a42e97": {
+      "id": "583a4ec0-0e7a-41c3-8e09-8aa4c5a42e97",
+      "title": "Shred documents"
+    },
+    "0f9052b1-4a5e-419d-8dbf-1ac3fb63c2f7": {
+      "id": "0f9052b1-4a5e-419d-8dbf-1ac3fb63c2f7",
+      "title": "Make a mojito"
+    },
+    "da5c6c67-e64c-43aa-af00-54d00834d5cf": {
+      "id": "da5c6c67-e64c-43aa-af00-54d00834d5cf",
+      "title": "Frame neighbour"
+    },
+    "546810f9-7582-443b-aa8d-877ea208ec3b": {
+      "id": "546810f9-7582-443b-aa8d-877ea208ec3b",
+      "title": "Update portfolio"
+    },
+    "7e896ae1-4165-4efc-bb06-45f019c962df": {
+      "id": "7e896ae1-4165-4efc-bb06-45f019c962df",
+      "title": "Make bed"
+    },
+    "74795653-fc7e-47bb-8a50-0e5bc3257755": {
+      "id": "74795653-fc7e-47bb-8a50-0e5bc3257755",
+      "title": "Bury the body"
+    },
+    "94aa97ab-61da-4e51-863a-23ae57e9a00a": {
+      "id": "94aa97ab-61da-4e51-863a-23ae57e9a00a",
+      "title": "Water plants"
+    },
+    "5c0ce6e0-c905-4f5b-bae8-1f60c3770c27": {
+      "id": "5c0ce6e0-c905-4f5b-bae8-1f60c3770c27",
+      "title": "setInterval"
+    },
+    "9adc4090-58c5-41c6-a1aa-65e78188ab08": {
+      "id": "9adc4090-58c5-41c6-a1aa-65e78188ab08",
+      "title": "Finish drag and drop"
+    },
+    "8acc4e87-2a4f-4068-9993-c3b727e4aae2": {
+      "id": "8acc4e87-2a4f-4068-9993-c3b727e4aae2",
+      "title": "Deploy"
+    }
   },
-  {
-    "id": "583a4ec0-0e7a-41c3-8e09-8aa4c5a42e97",
-    "title": "Shred documents",
-    "status": "todo"
-  },
-  {
-    "id": "0f9052b1-4a5e-419d-8dbf-1ac3fb63c2f7",
-    "title": "Make a mojito",
-    "status": "todo"
-  },
-  {
-    "id": "da5c6c67-e64c-43aa-af00-54d00834d5cf",
-    "title": "Frame neighbour",
-    "status": "doing"
-  },
-  {
-    "id": "546810f9-7582-443b-aa8d-877ea208ec3b",
-    "title": "Update portfolio",
-    "status": "doing"
-  },
-  {
-    "id": "7e896ae1-4165-4efc-bb06-45f019c962df",
-    "title": "Make bed",
-    "status": "done"
-  },
-  {
-    "id": "74795653-fc7e-47bb-8a50-0e5bc3257755",
-    "title": "Bury the body",
-    "status": "todo"
-  },
-  {
-    "id": "94aa97ab-61da-4e51-863a-23ae57e9a00a",
-    "title": "Water plants",
-    "status": "todo"
-  },
-  {
-    "id": "5c0ce6e0-c905-4f5b-bae8-1f60c3770c27",
-    "title": "setInterval",
-    "status": "todo"
-  },
-  {
-    "id": "9adc4090-58c5-41c6-a1aa-65e78188ab08",
-    "title": "Finish drag and drop",
-    "status": "todo"
-  },
-  {
-    "id": "8acc4e87-2a4f-4068-9993-c3b727e4aae2",
-    "title": "Deploy",
-    "status": "todo"
-  }
-]
+  "todoIds": [
+    "e1457c49-f19d-431c-a2e1-e304abeb5e58",
+    "583a4ec0-0e7a-41c3-8e09-8aa4c5a42e97",
+    "0f9052b1-4a5e-419d-8dbf-1ac3fb63c2f7",
+    "74795653-fc7e-47bb-8a50-0e5bc3257755",
+    "94aa97ab-61da-4e51-863a-23ae57e9a00a",
+    "5c0ce6e0-c905-4f5b-bae8-1f60c3770c27",
+    "9adc4090-58c5-41c6-a1aa-65e78188ab08",
+    "8acc4e87-2a4f-4068-9993-c3b727e4aae2"
+  ],
+  "doingIds": [
+    "da5c6c67-e64c-43aa-af00-54d00834d5cf",
+    "546810f9-7582-443b-aa8d-877ea208ec3b"
+  ],
+  "doneIds": [
+    "7e896ae1-4165-4efc-bb06-45f019c962df"
+  ]
+}
