--- a/tasks.json
+++ b/tasks.json
@@ -1,48 +1,5 @@
 {
   "tasksById": {
-    "583a4ec0-0e7a-41c3-8e09-8aa4c5a42e97": {
-      "id": "583a4ec0-0e7a-41c3-8e09-8aa4c5a42e97",
-      "title": "Shred documents"
-    },
-    "0f9052b1-4a5e-419d-8dbf-1ac3fb63c2f7": {
-      "id": "0f9052b1-4a5e-419d-8dbf-1ac3fb63c2f7",
-      "title": "Make a mojito"
-    },
-    "da5c6c67-e64c-43aa-af00-54d00834d5cf": {
-      "id": "da5c6c67-e64c-43aa-af00-54d00834d5cf",
-      "title": "Frame neighbour"
-    },
-    "7e896ae1-4165-4efc-bb06-45f019c962df": {
-      "id": "7e896ae1-4165-4efc-bb06-45f019c962df",
-      "title": "Make bed"
-    },
-    "74795653-fc7e-47bb-8a50-0e5bc3257755": {
-      "id": "74795653-fc7e-47bb-8a50-0e5bc3257755",
-      "title": "Bury the body"
-    },
-    "94aa97ab-61da-4e51-863a-23ae57e9a00a": {
-      "id": "94aa97ab-61da-4e51-863a-23ae57e9a00a",
-      "title": "Water plants"
-    },
-    "5c0ce6e0-c905-4f5b-bae8-1f60c3770c27": {
-      "id": "5c0ce6e0-c905-4f5b-bae8-1f60c3770c27",
-      "title": "setInterval"
-    }
-  },
-  "todoIds": [
-    "583a4ec0-0e7a-41c3-8e09-8aa4c5a42e97",
-    "0f9052b1-4a5e-419d-8dbf-1ac3fb63c2f7",
-    "74795653-fc7e-47bb-8a50-0e5bc3257755",
-    "94aa97ab-61da-4e51-863a-23ae57e9a00a",
-    "5c0ce6e0-c905-4f5b-bae8-1f60c3770c27"
-  ],
-  "doingIds": [
-    "da5c6c67-e64c-43aa-af00-54d00834d5cf"
-  ],
-  "doneIds": [
-    "7e896ae1-4165-4efc-bb06-45f019c962df"
-  ],
-  "tasksbyId": {
     "e1457c49-f19d-431c-a2e1-e304abeb5e58": {
       "id": "e1457c49-f19d-431c-a2e1-e304abeb5e58",
       "title": "Launder Money"
@@ -55,10 +12,6 @@
       "id": "0f9052b1-4a5e-419d-8dbf-1ac3fb63c2f7",
       "title": "Make a mojito"
     },
-    "da5c6c67-e64c-43aa-af00-54d00834d5cf": {
-      "id": "da5c6c67-e64c-43aa-af00-54d00834d5cf",
-      "title": "Frame neighbour"
-    },
     "7e896ae1-4165-4efc-bb06-45f019c962df": {
       "id": "7e896ae1-4165-4efc-bb06-45f019c962df",
       "title": "Make bed"
@@ -67,21 +20,31 @@
       "id": "74795653-fc7e-47bb-8a50-0e5bc3257755",
       "title": "Bury the body"
     },
-    "94aa97ab-61da-4e51-863a-23ae57e9a00a": {
-      "id": "94aa97ab-61da-4e51-863a-23ae57e9a00a",
+    "bcd2e785-1780-42c9-bda1-8c99ab4bdb62": {
+      "id": "bcd2e785-1780-42c9-bda1-8c99ab4bdb62",
       "title": "Water plants"
     },
-    "5c0ce6e0-c905-4f5b-bae8-1f60c3770c27": {
-      "id": "5c0ce6e0-c905-4f5b-bae8-1f60c3770c27",
-      "title": "setInterval"
+    "bfc95b90-6848-46b0-9b0a-be99ad111294": {
+      "id": "bfc95b90-6848-46b0-9b0a-be99ad111294",
+      "title": "Frame my neighbour"
     },
-    "9adc4090-58c5-41c6-a1aa-65e78188ab08": {
-      "id": "9adc4090-58c5-41c6-a1aa-65e78188ab08",
-      "title": "Finish drag and drop"
-    },
-    "8acc4e87-2a4f-4068-9993-c3b727e4aae2": {
-      "id": "8acc4e87-2a4f-4068-9993-c3b727e4aae2",
-      "title": "Deploy"
+    "cdbf6cab-5f8a-4907-a36d-5e9322921daf": {
+      "id": "cdbf6cab-5f8a-4907-a36d-5e9322921daf",
+      "title": "Update portfolio"
     }
-  }
+  },
+  "todoIds": [
+    "e1457c49-f19d-431c-a2e1-e304abeb5e58",
+    "583a4ec0-0e7a-41c3-8e09-8aa4c5a42e97",
+    "0f9052b1-4a5e-419d-8dbf-1ac3fb63c2f7",
+    "74795653-fc7e-47bb-8a50-0e5bc3257755",
+    "bcd2e785-1780-42c9-bda1-8c99ab4bdb62"
+  ],
+  "doingIds": [
+    "bfc95b90-6848-46b0-9b0a-be99ad111294",
+    "cdbf6cab-5f8a-4907-a36d-5e9322921daf"
+  ],
+  "doneIds": [
+    "7e896ae1-4165-4efc-bb06-45f019c962df"
+  ]
 }
