Create onDragEnd endpoint

--- a/tasks.json
+++ b/tasks.json
@@ -34,11 +34,11 @@
     }
   },
   "todoIds": [
+    "55e7de8d-c46b-4dd6-9a8d-f6ba6babc5b7",
     "583a4ec0-0e7a-41c3-8e09-8aa4c5a42e97",
-    "0f9052b1-4a5e-419d-8dbf-1ac3fb63c2f7",
     "74795653-fc7e-47bb-8a50-0e5bc3257755",
-    "bcd2e785-1780-42c9-bda1-8c99ab4bdb62",
-    "55e7de8d-c46b-4dd6-9a8d-f6ba6babc5b7"
+    "0f9052b1-4a5e-419d-8dbf-1ac3fb63c2f7",
+    "bcd2e785-1780-42c9-bda1-8c99ab4bdb62"
   ],
   "doingIds": [
     "bfc95b90-6848-46b0-9b0a-be99ad111294",
@@ -46,5 +46,54 @@
   ],
   "doneIds": [
     "7e896ae1-4165-4efc-bb06-45f019c962df"
+  ],
+  "74795653-fc7e-47bb-8a50-0e5bc3257755,bcd2e785-1780-42c9-bda1-8c99ab4bdb62,55e7de8d-c46b-4dd6-9a8d-f6ba6babc5b7": [
+    "74795653-fc7e-47bb-8a50-0e5bc3257755",
+    "bcd2e785-1780-42c9-bda1-8c99ab4bdb62",
+    "55e7de8d-c46b-4dd6-9a8d-f6ba6babc5b7"
+  ],
+  "bfc95b90-6848-46b0-9b0a-be99ad111294,583a4ec0-0e7a-41c3-8e09-8aa4c5a42e97,0f9052b1-4a5e-419d-8dbf-1ac3fb63c2f7,cdbf6cab-5f8a-4907-a36d-5e9322921daf": [
+    "bfc95b90-6848-46b0-9b0a-be99ad111294",
+    "583a4ec0-0e7a-41c3-8e09-8aa4c5a42e97",
+    "0f9052b1-4a5e-419d-8dbf-1ac3fb63c2f7",
+    "cdbf6cab-5f8a-4907-a36d-5e9322921daf"
+  ],
+  "bfc95b90-6848-46b0-9b0a-be99ad111294,0f9052b1-4a5e-419d-8dbf-1ac3fb63c2f7,583a4ec0-0e7a-41c3-8e09-8aa4c5a42e97,cdbf6cab-5f8a-4907-a36d-5e9322921daf": [
+    "bfc95b90-6848-46b0-9b0a-be99ad111294",
+    "0f9052b1-4a5e-419d-8dbf-1ac3fb63c2f7",
+    "583a4ec0-0e7a-41c3-8e09-8aa4c5a42e97",
+    "cdbf6cab-5f8a-4907-a36d-5e9322921daf"
+  ],
+  "74795653-fc7e-47bb-8a50-0e5bc3257755,55e7de8d-c46b-4dd6-9a8d-f6ba6babc5b7,bcd2e785-1780-42c9-bda1-8c99ab4bdb62": [
+    "74795653-fc7e-47bb-8a50-0e5bc3257755",
+    "55e7de8d-c46b-4dd6-9a8d-f6ba6babc5b7",
+    "bcd2e785-1780-42c9-bda1-8c99ab4bdb62"
+  ],
+  "55e7de8d-c46b-4dd6-9a8d-f6ba6babc5b7,74795653-fc7e-47bb-8a50-0e5bc3257755,bcd2e785-1780-42c9-bda1-8c99ab4bdb62": [
+    "55e7de8d-c46b-4dd6-9a8d-f6ba6babc5b7",
+    "74795653-fc7e-47bb-8a50-0e5bc3257755",
+    "bcd2e785-1780-42c9-bda1-8c99ab4bdb62"
+  ],
+  "bfc95b90-6848-46b0-9b0a-be99ad111294,0f9052b1-4a5e-419d-8dbf-1ac3fb63c2f7,cdbf6cab-5f8a-4907-a36d-5e9322921daf": [
+    "bfc95b90-6848-46b0-9b0a-be99ad111294",
+    "0f9052b1-4a5e-419d-8dbf-1ac3fb63c2f7",
+    "cdbf6cab-5f8a-4907-a36d-5e9322921daf"
+  ],
+  "55e7de8d-c46b-4dd6-9a8d-f6ba6babc5b7,583a4ec0-0e7a-41c3-8e09-8aa4c5a42e97,74795653-fc7e-47bb-8a50-0e5bc3257755,bcd2e785-1780-42c9-bda1-8c99ab4bdb62": [
+    "55e7de8d-c46b-4dd6-9a8d-f6ba6babc5b7",
+    "583a4ec0-0e7a-41c3-8e09-8aa4c5a42e97",
+    "74795653-fc7e-47bb-8a50-0e5bc3257755",
+    "bcd2e785-1780-42c9-bda1-8c99ab4bdb62"
+  ],
+  "bfc95b90-6848-46b0-9b0a-be99ad111294,cdbf6cab-5f8a-4907-a36d-5e9322921daf": [
+    "bfc95b90-6848-46b0-9b0a-be99ad111294",
+    "cdbf6cab-5f8a-4907-a36d-5e9322921daf"
+  ],
+  "55e7de8d-c46b-4dd6-9a8d-f6ba6babc5b7,583a4ec0-0e7a-41c3-8e09-8aa4c5a42e97,74795653-fc7e-47bb-8a50-0e5bc3257755,0f9052b1-4a5e-419d-8dbf-1ac3fb63c2f7,bcd2e785-1780-42c9-bda1-8c99ab4bdb62": [
+    "55e7de8d-c46b-4dd6-9a8d-f6ba6babc5b7",
+    "583a4ec0-0e7a-41c3-8e09-8aa4c5a42e97",
+    "74795653-fc7e-47bb-8a50-0e5bc3257755",
+    "0f9052b1-4a5e-419d-8dbf-1ac3fb63c2f7",
+    "bcd2e785-1780-42c9-bda1-8c99ab4bdb62"
   ]
 }
