--- a/tasks.json
+++ b/tasks.json
@@ -35,9 +35,9 @@
   },
   "todoIds": [
     "55e7de8d-c46b-4dd6-9a8d-f6ba6babc5b7",
-    "583a4ec0-0e7a-41c3-8e09-8aa4c5a42e97",
     "74795653-fc7e-47bb-8a50-0e5bc3257755",
     "0f9052b1-4a5e-419d-8dbf-1ac3fb63c2f7",
+    "583a4ec0-0e7a-41c3-8e09-8aa4c5a42e97",
     "bcd2e785-1780-42c9-bda1-8c99ab4bdb62"
   ],
   "doingIds": [
@@ -94,6 +94,13 @@
     "583a4ec0-0e7a-41c3-8e09-8aa4c5a42e97",
     "74795653-fc7e-47bb-8a50-0e5bc3257755",
     "0f9052b1-4a5e-419d-8dbf-1ac3fb63c2f7",
+    "bcd2e785-1780-42c9-bda1-8c99ab4bdb62"
+  ],
+  "55e7de8d-c46b-4dd6-9a8d-f6ba6babc5b7,74795653-fc7e-47bb-8a50-0e5bc3257755,0f9052b1-4a5e-419d-8dbf-1ac3fb63c2f7,583a4ec0-0e7a-41c3-8e09-8aa4c5a42e97,bcd2e785-1780-42c9-bda1-8c99ab4bdb62": [
+    "55e7de8d-c46b-4dd6-9a8d-f6ba6babc5b7",
+    "74795653-fc7e-47bb-8a50-0e5bc3257755",
+    "0f9052b1-4a5e-419d-8dbf-1ac3fb63c2f7",
+    "583a4ec0-0e7a-41c3-8e09-8aa4c5a42e97",
     "bcd2e785-1780-42c9-bda1-8c99ab4bdb62"
   ]
 }
