--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "kanban",
   "version": "1.0.0",
-  "description": "",
+  "description": "A no-frills, fullstack kanban app",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "nodemon server.js",
     "client": "cd client && npm start",
-    "dev": "concurrently \"npm run server\" \"npm run client\" "
+    "dev": "concurrently \"npm run server\" \"npm run client\" ",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "author": "",
   "license": "ISC",
@@ -18,7 +19,6 @@
     "morgan": "^1.9.1"
   },
   "devDependencies": {
-    "colors": "^1.3.3",
     "nodemon": "^1.18.9"
   }
 }
