--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "http-proxy-middleware": "^0.20.0",
     "i": "^0.3.6",
     "npm": "^6.5.0",
     "react": "^16.7.0",
@@ -27,6 +28,5 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ],
-  "proxy": "http://localhost:8000"
+  ]
 }
