--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "colors": "^1.3.3",
     "concurrently": "^4.1.2",
     "express": "^4.17.1",
-    "morgan": "^1.9.1"
+    "mongoose": "^5.7.1",
+    "morgan": "^1.9.1",
+    "passport": "^0.4.0",
+    "passport-google-oauth20": "^2.0.0"
   },
   "devDependencies": {
     "nodemon": "^1.19.2"
