--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "nodemon server.js",
+    "start": "node index.js",
+    "server": "nodemon index.js",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\" ",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
@@ -16,6 +17,7 @@
     "body-parser": "^1.19.0",
     "colors": "^1.3.3",
     "concurrently": "^4.1.2",
+    "cookie-session": "^1.3.3",
     "express": "^4.17.1",
     "mongoose": "^5.7.1",
     "morgan": "^1.9.1",
