--- a/tasks.json
+++ b/tasks.json
@@ -19,11 +19,21 @@
     "e1e548a7-a6cc-45ba-a491-9bdf74f86718": {
       "id": "e1e548a7-a6cc-45ba-a491-9bdf74f86718",
       "title": "Water plants"
+    },
+    "550b1336-df65-45ee-9c02-d8ac22363490": {
+      "id": "550b1336-df65-45ee-9c02-d8ac22363490",
+      "title": "Walk doggo"
+    },
+    "2de81cb5-b206-4a5d-ba32-dc2f3e2db0b7": {
+      "id": "2de81cb5-b206-4a5d-ba32-dc2f3e2db0b7",
+      "title": ""
     }
   },
   "todoIds": [
+    "550b1336-df65-45ee-9c02-d8ac22363490",
     "fddd3242-7e48-4466-bd87-3cf04f87d885",
-    "736a2e60-be24-4d62-98b4-dc671b100065"
+    "736a2e60-be24-4d62-98b4-dc671b100065",
+    "2de81cb5-b206-4a5d-ba32-dc2f3e2db0b7"
   ],
   "doingIds": [
     "5b9ad049-68bf-469e-b511-ab16ee35bfbc"
